--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "@prisma/client": "^4.12.0",
+    "@sendgrid/mail": "^7.7.0",
     "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/uuid": "^9.0.1",
@@ -42,6 +43,7 @@
     "express-validator": "^6.14.3",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "twilio": "^4.13.0"
   }
 }
